--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^20.17.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "@types/ws": "^8.5.13",
     "bufferutil": "^4.0.9",
     "dotenv": "^16.4.7",
