--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "email": "powershell -Command \"Copy-Item .env -Destination ./node_modules/react-email\" && email dev --dir email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
@@ -26,6 +27,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
+    "@react-email/components": "^0.0.33",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
     "@uploadthing/react": "^7.1.5",
@@ -42,9 +44,11 @@
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^3.0.7",
     "react-hook-form": "^7.54.2",
     "rechart": "^0.0.1",
     "recharts": "^2.15.1",
+    "resend": "^4.1.2",
     "slugify": "^1.6.6",
     "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
